--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "eslint-config-next": "13.4.6",
     "mongoose": "^7.3.0",
     "next": "13.4.6",
+    "next-video": "^0.15.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-html5video": "^2.5.1",
     "react-icons": "^4.9.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
